docker ready this branch.

--- a/runningmean/Makefile
+++ b/runningmean/Makefile
@@ -2,6 +2,8 @@
 all: runningmean.so 
 runningmean.so:runningmean.c
 	gcc -shared -I/usr/include/python2.7 -o runningmean.so -fPIC runningmean.c -w -lm -O3  -DHAVE_OPENMP  -std=c99
+clean:
+	rm *.so
 #Winson: remove -lgomp (gnu openmp library), -fopenmp(openmp option in C) is removed to optimize the performance
 
 #gcc -shared -I/usr/include/python2.7 -o runningmean.so -fPIC runningmean.c -w -lm -O3 -lgomp -fopenmp -DHAVE_OPENMP 
